# dotfiles

./: .gitattributes  .gitignore  .gitmodules  BOOTSTRAP.md  README.md  setup.ps1  setup.sh
claude/: CLAUDE.md  settings.json
claude/hooks/: ada-context-reload.ps1  ada-guard.ps1  ada-handover-lib.ps1  ada-notify.ps1  ada-precompact-msg.txt  ada-precompact.ps1  telegram-reply-guard-lib.ps1  telegram-reply-guard.ps1
claude/hooks/tests/: test-ada-context-reload.ps1  test-ada-guard.ps1  test-ada-handover-lib.ps1  test-telegram-reply-guard.ps1
claude/skills/add-knowledge-source/: SKILL.md
claude/skills/agy-model/: SKILL.md  agy_models.json  set_model.py
claude/skills/chusho-policy/: SKILL.md
claude/skills/dotenvx/: SKILL.md  pyproject.toml
claude/skills/youtube-eval/: SKILL.md  pyproject.toml
claude/skills/youtube-eval/scripts/: eval.py
claude/skills/youtube-eval/tests/: test_eval.py
codex/: AGENTS.md
config/git/: ignore
gemini/: GEMINI.md
git-hooks/: pre-commit
routines/: README.md  routines.toml
routines/scripts/: routines.py
routines/tests/: test_routines.py
rules/: coding.md  git.md  security.md  workflow.md
rules-presets/output/: rich.md
rules-presets/tone/: concise-en.md  consultant-jp.md  tundere-jp.md
rules/output/: minimal.md
rules/tone/: ada-jp.md  associate_girl-jp.md  formal-jp.md  kansai-ojisan-jp.md
rules/tooling/: bun.md  uv.md
scripts/: Use-DeepSeek.ps1
templates/githooks/: pre-commit-python
templates/gitleaks/: known-fp.toml
templates/project/: base.md  gitignore-snippet.txt  python.md  typescript.md
(+37 files in other folders)
